glib-macros/tests/closure_compiletest/07-closure-string-rename.rs
fn main() {
    use glib::closure;
    let v = std::rc::Rc::new(1);
    closure!(#[strong(rename_to = "a")] self.v, move || {});
}
